hphp/hack/test/typecheck/require_strict.php.exp
File "require_strict.php", line 2, characters 1-25:
Toplevel statements besides requires are not allowed in strict files (Parsing[1002])
